--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,32 @@
 header
     {   color:#777777; 
-        float:right;
-        padding-top: 25px;
-        margin-left: 50px;
+        float:left;
+        margin-left: -90px;
         border-color: #cccccc;
         background-color: #ffffff;
-        width: 200px;
-        height: 80px;
-        
+        width: 100%;
+        height: 60px;
+        padding-top: 61px;
+        padding-left: 795px;
+        margin-top: -8px;
         font-family: 'Georgia', Times, "Times New Roman", serif;
+    
       
     }
 body{
+color: #777777;
+background-image: url("../images/cheap_diagonal_fabric.png");
 width: 960px;
+margin: auto 0;
+padding-left: 20px;
 
 }
 
 
+a{
+    color: #777777;
+    padding-right: 10px;
+}
 
 section{
 text-align: center;
@@ -25,38 +35,42 @@ color: white;
 padding: 44px;
 width: 150px;
 background-color: #4aaaa5;
+margin-top: -105px;
+margin-left: 5px;
 
 }
 hr {
     display: block;
     position: relative;
     padding: 0;
-    margin: 8px auto;
+    margin: -1px auto;
     height: 0;
-    width: 100%;
+    width: 150%;
     max-height: 0;
     font-size: 1px;
     line-height: 0;
     clear: both;
     border: none;
-    border-top: 1px solid #aaaaaa;
-    border-bottom: 1px solid #ffffff;
+    border-top: 2px solid #aaaaaa;
+    border-bottom: px solid #aaaaaa;
  }
 
 
  
 
 
-h1{
+h1, #contact{
 color: #4aaaa5;
 background-color: #ffffff;
+padding:20px;
+
 }
 
 p{
 background-color: #ffffff;
 border-color: #301414; 
-float:right;
-width: 650px;
+font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
 }
 
 
@@ -66,10 +80,12 @@ width: 650px;
     height: 100%;
     width: 100%;
     font-size: 1px;
-    margin: 0px auto;
+   
     border-top: 5px solid #4aaaa5;
     border-bottom: 5px solid #4aaaa5;
     margin-top: 30px;
+  
+    
 
 }
 
@@ -77,5 +93,73 @@ footer{
     background-color: #666666;
     height: 50px;
     width: 100%;
+    bottom: 0;
+  
+    
 
 }
+
+img{
+   width: 370px;
+    float: left;
+    padding-bottom: 50px;
+    padding-right: 20px;
+}
+
+
+#N,#e {
+
+    width: 100%;
+    padding: 12px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 5px solid #ccc;
+    box-sizing: border-box;
+
+}
+#m{width: 100%;
+    padding: 105px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 5px solid #ccc;
+    box-sizing: border-box;
+
+
+}
+
+aside{
+font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+color: #777777;
+}
+
+#button{
+    text-align: center;
+    padding: 12px;
+    width: 65px;
+    background-color: #4aaaa5;
+    color: white;
+}
+
+
+.image { 
+    position: relative; 
+    width: 100%; 
+ }
+ 
+
+   
+#bg{
+    background-color: #ffffff;
+    height: 940px;
+    
+}
+#be{
+    background-color: #ffffff;
+    margin: auto;
+    padding: 20px;
+}
+#bge{
+    height:400px;
+    background-color: #ffffff;
+}
+
